jdk 要求1.8 增加了long型转LocalDateTime

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <version>2.1.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
